<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bg_color">
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:checkedButton="@+id/rbHome">
        <RadioButton
            android:id="@+id/rbHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/tab_home"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_home_selector"/>
        <RadioButton
            android:id="@+id/rbLive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/tab_live"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_zhibo_selector"/>
        <RadioButton
            android:id="@+id/rbFollw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/tab_follw"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_guanzhu_selector"/>
        <RadioButton
            android:id="@+id/rbMe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/tab_me"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_wode_selector"/>

    </RadioGroup>
</LinearLayout>