<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/title_bg_color">
        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_nav_close_selector"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/title_text_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textColor="@color/bg_red_color"/>
    </LinearLayout>
    <include layout="@layout/line_h"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lable_username_number"
    android:paddingLeft="20dp"
    android:paddingTop="16dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:maxLines="1"
        android:maxLength="20"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_password"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:maxLines="1"
        android:maxLength="20"
        android:background="@null"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="20dp"
        android:textSize="@dimen/title_text_size"
        android:background="@drawable/btn_login_selector"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvForgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@color/third_party_text_color"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/line_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_login"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="@color/third_party_text_color"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/line_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/ivQQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_qq_on"
                android:layout_margin="20dp"/>
            <ImageView
                android:id="@+id/ivSina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_sina"
                android:layout_margin="20dp"/>
            <ImageView
                android:id="@+id/ivWeixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_weixin"
                android:layout_margin="20dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>